home page added

--- a/src/content/page/home.mdx
+++ b/src/content/page/home.mdx
@@ -1,18 +1,57 @@
 ---
-seoTitle: "Home"
+seoTitle: Strona główna | Jaman7
+title: Strona główna
+hero:
+  title: Build faster with Astro + TinaCMS
+  subtitle: Deliver content-driven websites with lightning speed and in-line editing that feels magical.
+  buttons:
+    - label: Explore Blog
+      href: /blog
+      variant: primary
+    - label: Edit Content
+      href: /admin
+      variant: secondary
+  gradientFrom: purple-700
+  gradientTo: blue-500
+  showBlob: true
+features:
+  - title: Fast by Default
+    description: Powered by Astro's blazing fast static rendering.
+  - title: Inline Editing
+    description: Edit directly in your browser with TinaCMS.
+  - title: Markdown + MDX
+    description: Combine content and components effortlessly.
+testimonials:
+  - author: Anna Kowalska
+    role: Product Manager, WebX
+    avatar: /images/avatar-w.svg
+    quote: 'TinaCMS completely changed how our team works with content!'
+  - author: Jan Nowak
+    role: Frontend Dev, CreativeTech
+    avatar: /images/avatar-m.svg
+    quote: 'Astro is ridiculously fast, and editing in Tina is just fun!'
+section1:
+  title: Build with speed
+  subtitle: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+  image: images/illustration1.svg
+section2:
+  title: CMS made easy
+  subtitle: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+  image: images/illustration2.svg
+section3:
+  title: Powered by Astro
+  subtitle: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+  image: images/illustration3.svg
 ---
-# 🧑‍🚀 Hello, Astronaut!
 
-Welcome to the official [Astro](https://astro.build/) + [TinaCMS](https://tina.io/) starter template! This template serves as a lightweight, minimally-styled starting point for anyone looking to build a personal website, blog, or portfolio with Astro and TinaCMS.
+# Lorem ipsum dolor sit amet
 
-This template comes with a few integrations already configured in your `astro.config.mjs` file. You can customize this further with [Astro Integrations](https://astro.build/integrations) to add tools like Tailwind to your project.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
 
-Here are a few ideas on how to get started with the template:
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
 
-* **Edit this page**: Navigate to `/admin` to update your homepage content in TinaCMS or manually edit `src/pages/index.astro` for full control.
-* **Site Header**: Customize the navigation items in TinaCMS under the **Config Collection** or via `src/components/Header.astro`.
-* **Site Footer**: Make it yours by adding your name or details in TinaCMS Global Config.
-* **Explore Blog Posts**: Check out sample posts in `src/content/blog` to see how content is structured or edit them in TinaCMS under the **Blog Collection**.
-* **Layout Customization**: Update the blog post page layout in `src/layouts/BlogPost.astro` for a unique look.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
 
-Have fun! If you get stuck, remember to check out the [Astro documentation](https://docs.astro.build/en/getting-started/) or [TinaCMS documentation](https://tina.io/docs) for guidance. You can also join the [TinaCMS Discord](https://discord.com/invite/zumN63Ybpf) community to ask questions and connect with other users.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
