playwright add tests

--- a/src/content/page/home.mdx
+++ b/src/content/page/home.mdx
@@ -4,6 +4,8 @@ title: Strona główna
 hero:
   title: Build faster with Astro + TinaCMS
   subtitle: Deliver content-driven websites with lightning speed and in-line editing that feels magical.
+  textColor: blue
+  backgroundImage: /images/pexels-cookiecutter-1148820.jpg
   buttons:
     - label: Explore Blog
       href: /blog
@@ -11,8 +13,8 @@ hero:
     - label: Edit Content
       href: /admin
       variant: secondary
-  gradientFrom: purple-700
-  gradientTo: blue-500
+  gradientFrom: sky-200
+  gradientTo: via-blue-400
   showBlob: true
 features:
   - title: Fast by Default
